Refactor: Unify and consolidate core services
This commit refactors the SeNARS cognitive system to unify and consolidate several core services, reducing code duplication and improving clarity.

Key changes include:

1.  **Governance Unification:** Merged the redundant `immemory.ImmemoryGovernor` into a single, comprehensive `governance.GovernanceService`. The `SystemFactory` has been updated to use this unified service.

2.  **Explanation Consolidation:** Consolidated all explanation-related logic from the `explain` package into the `explanation` package. The `CausalChainExplanation` class was renamed to `CausalChainTracer` for better clarity.

3.  **Attention Mechanism Refactoring:** Unified the attention-related logic. The functionality of `salience.SalienceAttention` was merged into `attention.AttentionService`, and the redundant `salience` package was removed.

4.  **Test Suite Correction:** Updated the entire test suite to reflect these significant refactoring changes. This involved moving test files, fixing compilation errors due to package and class name changes, and updating mock objects and constructor calls to align with the new unified service architecture. All tests now pass.

These changes result in a cleaner, more maintainable codebase by centralizing scattered logic and removing redundant implementations.